# internal/models/serve.go
@@ -1,0 +1,6 @@
+package models
+
+type ServedAd struct {
+	Ad           Ad     `json:"ad"`
+	ImpressionID string `json:"impression_id"`
+}
